       pasting multiple lines. (Daniel Sahlberg)
- BUG: Project monitor duplicated the list of Users to ignore
       every time a project was edited. (Daniel Sahlberg)
- BUG: Project monitor kept an error status on a project that had
       temporary connection issues, even after the next connection
       was successful. (Daniel Sahlberg)

Version 1.14.5
- BUG: 1.14.4 was wrongly linked against svn 1.14.1
       instead of svn 1.14.2
       
Version 1.14.4
- BUG: revisions entered in the merge dialog were
       not selected anymore in the log dialog. (Stefan)
- BUG: urls pasted in merge dialog could have newlines
       at the end. (Daniel Sahlberg)
- NEW: add autocomplete functionality in the log dialog 
       used in Repository browser. (Daniel Sahlberg)
- BUG: Crash in TMerge when doing Redo after saving. (Stefan)
- BUG: hook scripts specified with %REPOROOT% were not
       executed correctly for paths more than two
       levels down the root. (Stefan)
- NEW: Commit button in Changed-for-modifications
       dialog. (Stefan)
- BUG: TMerge find dialog could use a previous replace
       string when replacing. (Stefan)

Version 1.14.3
- BUG: clipboard wasn't closed after pasting into
       the filter control in the log dialog. (Stefan)
- BUG: when merging via log dialog, a warning was falsely
        shown "The target has local modifications". (Stefan)

Version 1.14.2
- BUG: when starting a log dialog from an existing
       log dialog, the project properties were
       not read anymore. (Stefan)
- BUG: When line-wrapping is on in TMerge and
       the window is resized, the current line
       was not kept in the view. (Stefan)
- BUG: reload in TMerge with collapsed lines
       moved the view, the top line was not
       kept in place. (Stefan)
- BUG: TortoiseBlame crashed when searching
       upwards from the last line. (Stefan)
- BUG: Redo in TMerge failed to mark the document
       as modified. (Stefan)