@@ -16,6 +16,8 @@
 - BUG: Project monitor kept an error status on a project that had
        temporary connection issues, even after the next connection
        was successful. (Daniel Sahlberg)
+- NEW: Added a menu item in Project monitor to check one specific
+       project. (Daniel Sahlberg)
 
 Version 1.14.5
 - BUG: 1.14.4 was wrongly linked against svn 1.14.1
